chars firt attepm impl
